--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
       # - command
   pre_build:
     commands:
-       - npm install -g angular-cli
+       - npm install -g @angular/cli
        - npm install 
   build:
     commands:
